#8 Implementing entities in db: logging style improvement

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -1,5 +1,5 @@
 #Error messages
-error_credentials=Incorrect username or password.
+error_credentials=Incorrect email or password.
 
 #Info messages
 info_resource_secured=These resource are secured. You have to authenticate first.
