#8 Implementing entities in db: adding validation for creating article

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -3,3 +3,10 @@ error_credentials=Incorrect email or password.
 
 #Info messages
 info_resource_secured=These resource are secured. You have to authenticate first.
+
+#Validation
+NotEmpty.article.uniqueName = Please fill out this field.
+NotEmpty.article.title = Please fill out this field.
+NotEmpty.article.creationDateAsString = Please fill out this field.
+NotEmpty.article.author = Please fill out this field.
+NotNull.article.articleTagList = At least one tag has to be selected.
