--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -7,6 +7,6 @@ info_resource_secured=These resource are secured. You have to authenticate first
 #Validation
 NotEmpty.article.uniqueName = Please fill out this field.
 NotEmpty.article.title = Please fill out this field.
-NotEmpty.article.creationDateAsString = Please fill out this field.
+NotNull.article.creationDate = Please fill out this field.
 NotEmpty.article.author = Please fill out this field.
 NotNull.article.articleTagList = At least one tag has to be selected.
