#8 Implementing entities in db: implement confirmation page

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -4,6 +4,11 @@ error_credentials=Incorrect email or password.
 #Info messages
 info_resource_secured=These resource are secured. You have to authenticate first.
 
+#Confirmation
+confirmation.title=Confirmation
+confirmation.content.delete.article=Do you really want delete this article?
+
+
 #Validation
 NotEmpty.article.uniqueName = Please fill out this field.
 NotEmpty.article.title = Please fill out this field.
