#8 Implementing entities in db: implement info page

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -8,6 +8,10 @@ info_resource_secured=These resource are secured. You have to authenticate first
 confirmation.title=Confirmation
 confirmation.content.delete.article=Do you really want delete this article?
 
+#Info
+info.title=Information
+info.content.create.article=The article was created.
+info.content.edit.article=The article was updated.
 
 #Validation
 NotEmpty.article.uniqueName = Please fill out this field.
