#8 Implementing entities in db: implement actions on table

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -19,3 +19,7 @@ NotEmpty.article.title = Please fill out this field.
 NotNull.article.creationDate = Please fill out this field.
 NotEmpty.article.author = Please fill out this field.
 NotNull.article.articleTagList = At least one tag has to be selected.
+
+#Errors
+error.table.nothing.selected=At least one row has to be selected.
+error.table.to.many.selected=At most one row can be selected. 
