#8 Implementing entities in db: implement styles for error messages

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -22,4 +22,4 @@ NotNull.article.articleTagList = At least one tag has to be selected.
 
 #Errors
 error.table.nothing.selected=At least one row has to be selected.
-error.table.to.many.selected=At most one row can be selected. 
+error.table.to.many.selected=Only one row can be selected. 
