#8 Implementing entities in db: add ok messages

--- a/ChrisBlog/src/main/resources/messages_en.properties
+++ b/ChrisBlog/src/main/resources/messages_en.properties
@@ -1,25 +1,25 @@
 #Error messages
-error_credentials=Incorrect email or password.
+error.credentials=Incorrect email or password.
 
 #Info messages
-info_resource_secured=These resource are secured. You have to authenticate first.
+info.resource.secured=These resource are secured. You have to authenticate first.
+
+#Ok messages
+ok.create.article=The article was created.
+ok.edit.article=The article was updated.
+ok.delete.article=The article was deleted.
 
 #Confirmation
 confirmation.title=Confirmation
 confirmation.content.delete.article=Do you really want delete this article?
 
-#Info
-info.title=Information
-info.content.create.article=The article was created.
-info.content.edit.article=The article was updated.
-
-#Validation
+#Validation JSR303
 NotEmpty.article.uniqueName = Please fill out this field.
 NotEmpty.article.title = Please fill out this field.
 NotNull.article.creationDate = Please fill out this field.
 NotEmpty.article.author = Please fill out this field.
 NotNull.article.articleTagList = At least one tag has to be selected.
 
-#Errors
+#Validation Spring
 error.table.nothing.selected=At least one row has to be selected.
 error.table.to.many.selected=Only one row can be selected. 
